[package]
name = "rustdn"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dirs = "5.0.1"
rustix = { version = "0.38.34", default-features = false, features = [
    "fs",
    "std",
] }
